@@ -1,34 +1,34 @@
 import org.apache.spark.sql.{DataFrame, SparkSession}
 import org.apache.spark.sql.functions._
-import com.twilio.Twilio
-import com.twilio.rest.api.v2010.account.Message
-import com.twilio
-import com.twilio.`type`.PhoneNumber
-
-case class GPSData(user_id: Long, latitude: Double, longitude: Double, timestamp: String)
 
 object spark_streaming {
-  // Twilio credentials
-  val ACCOUNT_SID = "ACe3696a2074bbc69159407b205fe6a170"
-  val AUTH_TOKEN = "553ae32e9f94a42a2dc475dfdafc9839"
-  val FROM_PHONE_NUMBER = "+12072927257" // Twilio phone number
-
-  Twilio.init(ACCOUNT_SID, AUTH_TOKEN)
 
   def main(args: Array[String]): Unit = {
     val spark = SparkSession.builder()
       .appName("Kafka Spark Consumer")
       .master("local[*]")
+      .config("spark.driver.extraJavaOptions", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
       .getOrCreate()
 
     import spark.implicits._
 
     spark.sparkContext.setLogLevel("ERROR")
+    // Read forbidden areas from PostgreSQL
+    val forbiddenAreasDF = spark.read
+      .format("jdbc")
+      .option("url", "jdbc:postgresql://172.17.124.50:5432/postgres")
+      .option("dbtable", "forbidden_areas")
+      .option("user", "postgres")
+      .option("password", "abc")
+      .load()
+
+    // Broadcast the forbidden areas DataFrame
+    val broadcastForbiddenAreas = broadcast(forbiddenAreasDF)
 
     // Read data from Kafka
     val kafkaDF = spark.readStream
       .format("kafka")
-      .option("kafka.bootstrap.servers", "localhost:9092")
+      .option("kafka.bootstrap.servers", "localhost:9092") // Remplacer par hostname -I sur WSL 172.17.124.50
       .option("subscribe", "my_topic")
       .option("startingOffsets", "earliest")
       .option("failOnDataLoss", "false")
@@ -39,44 +39,62 @@ object spark_streaming {
     val stringDF = kafkaDF.selectExpr("CAST(value AS STRING)").as[String]
 
     // Filter out the header row
-    val nonHeaderDF = stringDF.filter(row => !row.startsWith("latitude"))
+    val nonHeaderDF = stringDF.filter(row => !row.startsWith("id"))
 
-    // Split the CSV data and convert to DataFrame with GPSData case class
+    /*val nonHeaderDF = stringDF.filter(row =>
+        !row.startsWith("user_id")
+          && !row.startsWith("id"))
+          && !row.startsWith("firstname")
+          && !row.startsWith("location"))*/
+
+    // Split the CSV data and convert to DataFrame with schema
+    // Sample of one row : "13,Collen,Gower,Collen.Gower@yopmail.com,firefighter, champs élysées ,15-07-2024, 02:07:00"
     val gpsDF = nonHeaderDF.map { row =>
-      val fields = row.toString().split(",")
-      (fields(0).toString, fields(1).toString, fields(2).toString, fields(3).toString, fields(4).toString, fields(5).toDouble, fields(6).toDouble, fields(7))
-    }.toDF("user_id", "first_name", "last_name", "email", "job", "latitude", "longitude", "timestamp")
+      val fields = row.split(",")
+      (
+        fields(0).toInt, // user_id
+        fields(1), // first_name
+        fields(2), // last_name
+        fields(3), // email
+        fields(4), // job
+        fields(5), // location ex : 'Paris'
+        fields(6) // date
+      )
+    }.toDF("user_id", "firstname", "lastname", "email", "job", "location", "date")
 
-    // Filter the DataFrame for users within the specified latitude and longitude range
-    val filteredDF = gpsDF.filter($"latitude" >= 0 && $"latitude" <= 90 && $"longitude" >= 0 && $"longitude" <= 180)
+    // Convert the date column to timestamp
+    val formattedDF = gpsDF.withColumn("date", to_timestamp(col("date"), "yyyy-MM-dd HH:mm:ss"))
+    // Transformation: Filter the DataFrame for users from a specific city, e.g., "Paris"
+    // Join with forbidden areas to filter the DataFrame
+    val filteredDF = formattedDF.join(broadcastForbiddenAreas, formattedDF("location") === broadcastForbiddenAreas("area"), "inner")
+      .select("user_id", "firstname", "lastname", "email", "job", "location", "date")
 
-    // Function to send an SMS
-    def sendSMS(to: String, body: String): Unit = {
-      try {
-        val message = Message.creator(
-          new PhoneNumber(to),
-          new PhoneNumber(FROM_PHONE_NUMBER),
-          body
-        ).create()
-
-        println(s"SMS sent successfully: ${message.getSid}")
-      } catch {
-        case e: Exception => e.printStackTrace()
-      }
+    // Function to write to PostgreSQL
+    def writeToPostgres(df: DataFrame, batchId: Long): Unit = {
+      df.write
+        .format("jdbc")
+        .option("url", "jdbc:postgresql://172.17.124.50:5432/postgres")
+        .option("dbtable", "alerte_utilisateur")
+        .option("user", "postgres")
+        .option("password", "abc")
+        .mode("append")
+        .save()
     }
 
-    // Process each row to send an SMS
-    val query = filteredDF.writeStream
+    // Write the data to PostgreSQL using foreachBatch
+    val postgresQuery = filteredDF
+      .writeStream
       .outputMode("append")
-      .foreachBatch { (batchDF: DataFrame, batchID: Long) =>
-        batchDF.collect().foreach { row =>
-          val userId = row.getAs[String]("user_id")
-          val body = s"User $userId is within the specified latitude and longitude range."
-          sendSMS("+33788133903", body) // Send SMS to the specified phone number
-        }
+      .foreachBatch { (batchDF: DataFrame, batchId: Long) =>
+        /* FOR DEBUG PURPOSES ONLY  : */
+        println(s"Batch ID: $batchId")
+        batchDF.show(false)
+        /* FOR DEBUG PURPOSES ONLY */
+        writeToPostgres(batchDF, batchId)
       }
+      //.option("checkpointLocation", "src/main/scala/checkpoint_postgres")
       .start()
 
-    query.awaitTermination()
+    postgresQuery.awaitTermination()
   }
 }
